# opensearch-api-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
crate/: Cargo.toml
crate/examples/: basic_usage.rs  search_example.rs
crate/src/: document.rs  lib.rs
crate/src/client/: http.rs
crate/src/client/namespaces/: bulk.rs  indices.rs  mod.rs  search.rs
crate/src/types/: common.rs  document.rs  indices.rs  query.rs  search.rs
crate/src/types/aggregations/request/: bucket.rs
crate/src/types/aggregations/response/: bucket.rs  mod.rs
crate/tests/: bucket_aggregations_test.rs  cluster_test.rs  indices_test.rs
examples/: README.md  basic_usage.rs  search_example.rs
src/: document.rs  error.rs  lib.rs  macros.rs
src/client/: http.rs  mod.rs
src/client/namespaces/: cluster.rs  documents.rs  indices.rs  mod.rs  search.rs
src/types/: aggregations.rs  builder.rs  bulk.rs  common.rs  document.rs  mod.rs  query.rs  script.rs  search.rs
src/types/aggregations/request/: metric.rs  mod.rs  pipeline.rs
src/types/aggregations/response/: bucket.rs  metric.rs  mod.rs  pipeline.rs
tests/: bulk_test.rs  client_test.rs  cluster_test.rs  document_test.rs  fixture.rs  indices_test.rs  metric_aggregations_test.rs  query_builder_tests.rs  search_test.rs
