[package]
name = "opensearch-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust structs and enums for OpenSearch API"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/yourusername/opensearch-api-rs"
keywords = ["opensearch", "api", "client"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
serde_yaml = "0.9"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], optional = true }
url = "2.3"
derive_builder = "0.20.2"
log = "0.4"
base64 = "0.22.1"
serde_with = "3.12.0"
serde_literals = "0.1.2"
serde_path_to_error = "0.1.14"
derive_more = { version = "2.0.1", features = ["from"] }
enum-as-inner = "0.6.1"

[features]
default = ["client"]
client = ["reqwest"]

[dev-dependencies]
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
testcontainers = { version = "0.23.3", features = ["reusable-containers", "http_wait"] }
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1"
anyhow = "1.0.98"


